[gd_scene load_steps=5 format=3 uid="uid://b6imchyuwi832"]

[ext_resource type="Script" path="res://code/player_spawns.gd" id="1_238a3"]

[sub_resource type="BoxShape3D" id="BoxShape3D_72ck3"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_eld1p"]
albedo_color = Color(0, 0, 0, 1)

[sub_resource type="BoxMesh" id="BoxMesh_mxke5"]
material = SubResource("StandardMaterial3D_eld1p")

[node name="player_spawns" type="Node3D"]
script = ExtResource("1_238a3")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.907777, 0.419452, 0, -0.419452, 0.907777, 0, 3, 6)

[node name="spawner" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="spawner"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.00145996, 0)
shape = SubResource("BoxShape3D_72ck3")

[node name="MeshInstance3D" type="MeshInstance3D" parent="spawner"]
transform = Transform3D(1, 0, 0, 0, 0.3, 0, 0, 0, 1, 0, -0.322324, 0)
mesh = SubResource("BoxMesh_mxke5")
skeleton = NodePath("")

[node name="spawner2" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 1, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="spawner2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.00145996, 0)
shape = SubResource("BoxShape3D_72ck3")

[node name="MeshInstance3D" type="MeshInstance3D" parent="spawner2"]
transform = Transform3D(1, 0, 0, 0, 0.3, 0, 0, 0, 1, 0, -0.322324, 0)
mesh = SubResource("BoxMesh_mxke5")
skeleton = NodePath("")

[node name="spawner3" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 1, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="spawner3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.00145996, 0)
shape = SubResource("BoxShape3D_72ck3")

[node name="MeshInstance3D" type="MeshInstance3D" parent="spawner3"]
transform = Transform3D(1, 0, 0, 0, 0.3, 0, 0, 0, 1, 0, -0.322324, 0)
mesh = SubResource("BoxMesh_mxke5")
skeleton = NodePath("")

[node name="spawner4" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 1, -3)

[node name="CollisionShape3D" type="CollisionShape3D" parent="spawner4"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.00145996, 0)
shape = SubResource("BoxShape3D_72ck3")

[node name="MeshInstance3D" type="MeshInstance3D" parent="spawner4"]
transform = Transform3D(1, 0, 0, 0, 0.3, 0, 0, 0, 1, 0, -0.322324, 0)
mesh = SubResource("BoxMesh_mxke5")
skeleton = NodePath("")

[node name="spawner5" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, -3)

[node name="CollisionShape3D" type="CollisionShape3D" parent="spawner5"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.00145996, 0)
shape = SubResource("BoxShape3D_72ck3")

[node name="MeshInstance3D" type="MeshInstance3D" parent="spawner5"]
transform = Transform3D(1, 0, 0, 0, 0.3, 0, 0, 0, 1, 0, -0.322324, 0)
mesh = SubResource("BoxMesh_mxke5")
skeleton = NodePath("")

[node name="spawner6" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 1, -3)

[node name="CollisionShape3D" type="CollisionShape3D" parent="spawner6"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.00145996, 0)
shape = SubResource("BoxShape3D_72ck3")

[node name="MeshInstance3D" type="MeshInstance3D" parent="spawner6"]
transform = Transform3D(1, 0, 0, 0, 0.3, 0, 0, 0, 1, 0, -0.322324, 0)
mesh = SubResource("BoxMesh_mxke5")
skeleton = NodePath("")

[node name="card_spawner" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.78474, 1.77447, -2)

[node name="card_spawner2" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.78474, 1.77447, -0.127904)

[node name="card_spawner3" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.78474, 1.77447, 2.05954)

[node name="card_spawner4" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.78474, 1.77447, -4.10581)

[node name="card_spawner5" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.78474, 1.77447, -7.81062)

[node name="card_spawner6" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.78474, 1.77447, -10.2285)
